Yo dawg. I heard you like plugin-plugins for plugin-plugins. So I applied a plugin-plugin to your plugin-plugin plugin.